--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -4,3 +4,4 @@
 <p><%= @result %></p>
 <p>Word: <%= @word %></p>
 <p>Letters were: <%= @letters.join(', ') %></p>
+<p><%= link_to "Play again", new_path %></p>
